# owasp-asi-reference

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  WALKTHROUGH.md  _config.yml  docker-compose.base.yml  findings.md  progress.md  task_plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ASI01_agent_goal_hijack/: README.md
ASI01_agent_goal_hijack/attack/: README.md  agent.py  attacker.py  docker-compose.yml  mcp_server.py  requirements.txt
ASI01_agent_goal_hijack/defense/: README.md  agent.py  attacker.py  docker-compose.yml  mcp_server.py  sanitizer.py
ASI02_tool_misuse/: README.md
ASI02_tool_misuse/attack/: Dockerfile  README.md  agent.py  attacker.py  (+2 more)
ASI04_supply_chain/: README.md
ASI06_memory_poisoning/: README.md
_shared/: README.md
_shared/agent_harness/: pyproject.toml
_shared/agent_harness/asi_harness/: config.py
_shared/agent_harness/asi_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
asi01-goal-hijacking/: README.md  WALKTHROUGH.md
asi02-tool-misuse/: README.md  WALKTHROUGH.md
asi06-memory-poisoning/: README.md  WALKTHROUGH.md
docs/: _config.yml  asi-glossary.md  index.html  lab-setup.md  spec.md  teaching-guide.html  teaching-with-this-repo.md
owasp asi specs/: SPEC_00_overview.md  SPEC_01_ASI01.md  SPEC_02_ASI06.md  SPEC_03_ASI02.md  SPEC_04_docker_and_shared.md
shared/: agent_loop.py  console.py  llm.py
(+73 files in other folders)
